--- a/style/header__and__footer.css
+++ b/style/header__and__footer.css
@@ -1,3 +1,19 @@
+* {
+	box-sizing: 0;
+	margin: 0;
+	padding: 0;
+	outline: none;
+}
+body {
+	font-family: 'Rubik', sans-serif;
+}
+ul, li {
+	list-style-type: none;
+}
+a {
+	text-decoration: none;
+}
+
 /* pc */
 
 /* header */
@@ -148,19 +164,7 @@
 }
 
 }
-@media screen and (max-width: 1200px){
 
-.footer__container-menu {
-	max-width: 1000px;
-	width: 100%;
-	height:250px;
-	margin: 0 auto;
-
-	display: flex;
-	justify-content: space-around;
-}
-
-}
 
 /*mobile*/
 
@@ -187,7 +191,7 @@
 .header__logo {
 	position: relative;
 	display: flex;
-	margin-left:42px;
+	margin-left:30px;
 }
 .header__logo-img {
 	width: 45px;
@@ -370,11 +374,6 @@
 .burger {
 
 	fill: #fff;
-	width: 70px;
-	transition: .5s;
-}
-.burger:hover {
-	fill: #FFDF00;
 	width: 70px;
 	transition: .5s;
 }
