--- a/style/header__and__footer.css
+++ b/style/header__and__footer.css
@@ -191,7 +191,7 @@ a {
 .header__logo {
 	position: relative;
 	display: flex;
-	margin-left:30px;
+	margin-left:5px;
 }
 .header__logo-img {
 	width: 45px;
@@ -323,6 +323,70 @@ a {
 
 
 }
+
+@media screen and (max-width: 1024px){ 
+.footer {
+	margin:0 auto;
+	margin-top: 212px;
+	max-width: 1920px;
+	width: 100%;
+}
+.footer__container {
+	margin:0 auto;
+	max-width: 1920px;
+	width: 100%;
+	height: 350px;
+	background-color: #24292E;
+}
+.footer__container-watermark {
+	position: absolute;
+	margin-top: 35px;
+	margin-left: 35px;
+}
+.footer__container__watermark-title {
+	font-weight: 300;
+	font-size: 14px;
+	line-height: 40px;
+
+	color: #595959;
+}
+.footer__container__watermark-ico {
+	display: flex;
+	justify-content: space-between;
+	width: 110px;
+}
+.footer__container__watermark-img {
+	width: 25px;
+	height: 25px;
+
+}
+.footer__container-menu {
+	max-width: 700px;
+	width: 100%;
+	height:350px;
+	margin: 0 auto;
+
+	display: flex;
+	justify-content: space-around;
+}
+.footer__container__menu-ul {
+	padding-top: 34px;
+}
+.footer__container__menu-li {
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 40px;
+	color: white;
+}
+.contfooter {
+	font-weight: 500;
+	font-size: 24px;
+	line-height: 40px;
+	color: white;
+}
+
+}
+
 
 @media screen and (max-width: 960px){
 .header {
