--- a/style/oleg.css
+++ b/style/oleg.css
@@ -1,9 +1,5 @@
 .block__right-description {
-	max-width: 713px;
-	width: 100%;
 	height: 650px;
-	background-color: #f2f2f2;
-	margin-top: 60px;
 }
 .description__block__left-img {
 	height: 100%;
@@ -16,6 +12,8 @@
 .description__block__link-a {
 	color: red;
 }
-@media screen and (max-width: 1024px), and (orientation:landscape) {
-
+@media screen and (max-width: 1024px){
+.block__right-description {
+	height: 900px;
+}
 }
