--- a/style/header__and__footer.css
+++ b/style/header__and__footer.css
@@ -324,7 +324,7 @@ a {
 
 }
 
-@media screen and (max-width: 1024px){ 
+@media screen and (max-width: 1024px) { 
 .footer {
 	margin:0 auto;
 	margin-top: 212px;
@@ -408,7 +408,7 @@ a {
 .header__logo {
 	position: relative;
 	display: flex;
-	margin-left:42px;
+	margin-left:5px;
 }
 .header__logo-img {
 	width: 45px;
@@ -542,5 +542,194 @@ a {
 
 
 
+
+}
+@media screen and (max-width: 768px) and (orientation:portrait){
+
+.footer__container-watermark {
+	position: absolute;
+	margin-top: 5px;
+	margin-left: 5px;
+}
+.footer__container__menu-ul {
+	margin-left:50px;
+}
+.footer__container__menu-li {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 40px;
+	color: white;
+}
+.contfooter {
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 40px;
+	color: white;
+}
+
+}
+@media screen and (max-width: 667px) and (orientation:portrait){
+.header__logo {
+	position: relative;
+	display: flex;
+	margin-left:5px;
+}
+.footer__container {
+	display: flex;
+	flex-direction: column;
+}
+.footer__container-watermark {
+	position: static;
+	margin: 0 auto;
+}
+.footer__container__watermark-ico {
+	display: flex;
+	justify-content: space-between;
+	width: 110px;
+}
+.footer__container__watermark-img {
+	width: 15px;
+	height: 15px;
+
+}
+.footer__container__menu-ul {
+	margin-left:20px;
+}
+.footer__container__menu-li {
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 40px;
+	color: white;
+}
+.contfooter {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 40px;
+	color: white;
+}
+
+}
+@media screen and (max-width: 640px) and (orientation:portrait){
+.header__logo {
+	position: relative;
+	display: flex;
+	margin-left:5px;
+}
+.footer__container {
+	display: flex;
+	flex-direction: column;
+}
+.footer__container-watermark {
+	position: static;
+	margin: 0 auto;
+}
+.footer__container__watermark-ico {
+	display: flex;
+	justify-content: space-between;
+	width: 110px;
+}
+.footer__container__watermark-img {
+	width: 15px;
+	height: 15px;
+
+}
+.footer__container__menu-ul {
+	margin-left:20px;
+}
+.footer__container__menu-li {
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 40px;
+	color: white;
+}
+.contfooter {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 40px;
+	color: white;
+}
+
+}
+@media screen and (max-width: 568px) and (orientation:portrait){
+.header__logo {
+	position: relative;
+	display: flex;
+	margin-left:5px;
+}
+.footer__container {
+	display: flex;
+	flex-direction: column;
+}
+.footer__container-watermark {
+	position: static;
+	margin: 0 auto;
+}
+.footer__container__watermark-ico {
+	display: flex;
+	justify-content: space-between;
+	width: 110px;
+}
+.footer__container__watermark-img {
+	width: 15px;
+	height: 15px;
+
+}
+.footer__container__menu-ul {
+	margin-left:-30px;
+}
+.footer__container__menu-li {
+	font-weight: 400;
+	font-size: 10px;
+	line-height: 40px;
+	color: white;
+}
+.contfooter {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 40px;
+	color: white;
+}
+
+}
+@media screen and (max-width: 480px) and (orientation:portrait){
+.header__logo {
+	position: relative;
+	display: flex;
+	margin-left:5px;
+}
+.footer__container {
+	display: flex;
+	flex-direction: column;
+}
+.footer__container-watermark {
+	position: static;
+	margin: 0 auto;
+}
+.footer__container__watermark-ico {
+	display: flex;
+	justify-content: space-between;
+	width: 110px;
+}
+.footer__container__watermark-img {
+	width: 15px;
+	height: 15px;
+
+}
+.footer__container__menu-ul {
+	max-width: 470px;
+	width: 100%;
+}
+.footer__container__menu-li {
+	font-weight: 400;
+	font-size: 10px;
+	line-height: 40px;
+	color: white;
+}
+.contfooter {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 40px;
+	color: white;
+}
 
 }
