--- a/style/index__mobile.css
+++ b/style/index__mobile.css
@@ -1,4 +1,5 @@
-@media screen and (max-width: 1024px), and (orientation:landscape) {
+/*альбомная*/
+@media screen and (max-width: 1024px) and (orientation:landscape){
 
 .info__container {
 	margin: 0 auto;
@@ -24,3 +25,147 @@
 }
 
 }
+
+/*портретная*/
+@media screen and (max-width: 768px) and (orientation:portrait){
+
+.info__container {
+	margin: 0 auto;
+	width: 100%;
+	height: 200px;
+	background-color: #FFDF00;
+	border-radius: 0px;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+
+	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.5);
+}
+.creators__container {
+	max-width: 1540px;
+	width: 100%;
+
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+}
+@media screen and (max-width: 640px){
+.info__container {
+	margin: 0 auto;
+	width: 100%;
+	height: 200px;
+	background-color: #FFDF00;
+	border-radius: 0px;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+
+	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.5);
+}
+.creators__container {
+	max-width: 1540px;
+	width: 100%;
+
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+}
+@media screen and (max-width: 600px){
+
+.info__container {
+	margin: 0 auto;
+	width: 100%;
+	height: 200px;
+	background-color: #FFDF00;
+	border-radius: 0px;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+
+	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.5);
+}
+.creators__container {
+	max-width: 1540px;
+	width: 100%;
+
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+}
+
+@media screen and (max-width: 480px){
+.selector__container-title {
+	max-width: 440px;
+	width: 100%;
+	font-weight: 700;
+	font-size: 30px;
+	line-height: auto;
+	color: #24292E;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 110px;
+}
+
+.selector__container {
+	margin: 0 auto;
+	width:100%;
+	margin: 0 auto;
+
+}
+.selector__container-block {
+	width:100%;
+	margin: 0 auto;
+	display: flex;
+	flex-direction:column ;
+		
+}
+.container__block-one {
+	display: flex;
+	flex-direction:column ;
+	align-items: center;
+	width:100%;
+}
+.container__block-one:nth-child(1) {
+	margin-top: 50px;
+}
+.container__block-one:nth-child(2) {
+	margin-top: 250px;
+}
+.info__container {
+	margin: 0 auto;
+	width: 100%;
+	height: 200px;
+	background-color: #FFDF00;
+	border-radius: 0px;
+	margin-top: 600px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+
+	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.5);
+}
+.creators__container {
+	max-width: 1540px;
+	width: 100%;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+}
+
+
+
