--- a/style/header__and__footer.css
+++ b/style/header__and__footer.css
@@ -544,7 +544,7 @@ a {
 
 
 }
-@media screen and (max-width: 768px) and (orientation:portrait){
+@media screen and (max-width: 768px){
 
 .footer__container-watermark {
 	position: absolute;
@@ -568,7 +568,7 @@ a {
 }
 
 }
-@media screen and (max-width: 667px) and (orientation:portrait){
+@media screen and (max-width: 667px){
 .header__logo {
 	position: relative;
 	display: flex;
@@ -609,7 +609,7 @@ a {
 }
 
 }
-@media screen and (max-width: 640px) and (orientation:portrait){
+@media screen and (max-width: 640px){
 .header__logo {
 	position: relative;
 	display: flex;
@@ -650,7 +650,7 @@ a {
 }
 
 }
-@media screen and (max-width: 568px) and (orientation:portrait){
+@media screen and (max-width: 568px){
 .header__logo {
 	position: relative;
 	display: flex;
@@ -691,7 +691,7 @@ a {
 }
 
 }
-@media screen and (max-width: 480px) and (orientation:portrait){
+@media screen and (max-width: 480px){
 .header__logo {
 	position: relative;
 	display: flex;
@@ -724,6 +724,52 @@ a {
 	font-size: 10px;
 	line-height: 40px;
 	color: white;
+}
+.contfooter {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 40px;
+	color: white;
+}
+
+}
+@media screen and (max-width: 414px){
+.header__logo {
+	position: relative;
+	display: flex;
+	margin-left:5px;
+}
+.footer__container {
+	display: flex;
+	flex-direction: column;
+}
+.footer__container-watermark {
+	position: static;
+	margin: 0 auto;
+}
+.footer__container__watermark-ico {
+	display: flex;
+	justify-content: space-between;
+	width: 110px;
+}
+.footer__container__watermark-img {
+	width: 15px;
+	height: 15px;
+
+}
+.footer__container__menu-ul {
+	max-width: 470px;
+	width: 100%;
+	margin: 0 auto;
+}
+.footer__container__menu-li {
+	font-weight: 400;
+	font-size: 10px;
+	line-height: 40px;
+	color: white;
+
+	padding: 0;
+	margin: 0 auto;
 }
 .contfooter {
 	font-weight: 500;
