--- a/style/about__mobile.css
+++ b/style/about__mobile.css
@@ -81,6 +81,21 @@
 	border-radius: 0px;
 	margin-left: -150px;
 }
+.header__two__container-link-ul {
+	margin:0 auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+.header__two__container-link-li {
+	color: #24292E;
+	font-weight: 400;
+	font-size: 24px;
+	line-height: auto;
+	text-align: center;
+
+	padding-top: 50px;
+}
 .header__two__container-link {
 	margin-top: -50px;
 }
@@ -233,14 +248,12 @@
 	margin-left: -185px;
 }
 .header__two__container-link {
-	margin-top: -130px;
+	margin-top: -150px;
 }
 .header__two__container-link-li {
-	color: #24292E;
-	font-weight: 400;
 	font-size: 16px;
-	line-height: auto;
-	text-align: center;
+
+	padding-top: 25px;
 }
 .about__container-title {
 	font-weight: 500;
