--- a/style/about__mobile.css
+++ b/style/about__mobile.css
@@ -9,14 +9,7 @@
 	overflow: hidden;
 
 }
-.container__banner {
-	max-width: 1440px;
-	width: 150%;
-	margin: 0 auto;
-	display: block;
-	border-radius: 0px;
-	margin-left: -180px;
-}
+
 .header__two__container-link {
 	margin-top: 0px;
 }
@@ -25,7 +18,7 @@
 .header__two__container-banner {
 	max-width: 1440px;
 	width: 100%;
-	height: 500px;
+	height: 260px;
 	margin: 0 auto;
 	background-color: ;
 
@@ -33,15 +26,10 @@
 
 }
 .container__banner {
-	max-width: 1440px;
-	width: 150%;
-	margin: 0 auto;
-	display: block;
-	border-radius: 0px;
-	margin-left: -160px;
+	display: none;
 }
 .header__two__container-link {
-	margin-top: -50px;
+	margin-top: 0px;
 }
 .about__container-title {
 	font-weight: 500;
@@ -66,21 +54,14 @@
 .header__two__container-banner {
 	max-width: 1440px;
 	width: 100%;
-	height: 500px;
+	height: 290px;
 	margin: 0 auto;
 	background-color: ;
 
 	overflow: hidden;
 
 }
-.container__banner {
-	max-width: 1440px;
-	width: 150%;
-	margin: 0 auto;
-	display: block;
-	border-radius: 0px;
-	margin-left: -150px;
-}
+
 .header__two__container-link-ul {
 	margin:0 auto;
 	display: flex;
@@ -97,7 +78,7 @@
 	padding-top: 50px;
 }
 .header__two__container-link {
-	margin-top: -50px;
+	margin-top: 0px;
 }
 .about__container-title {
 	font-weight: 500;
@@ -122,23 +103,16 @@
 .header__two__container-banner {
 	max-width: 1440px;
 	width: 100%;
-	height: 500px;
+	height: 280px;
 	margin: 0 auto;
 	background-color: ;
 
 	overflow: hidden;
 
 }
-.container__banner {
-	max-width: 1440px;
-	width: 180%;
-	margin: 0 auto;
-	display: block;
-	border-radius: 0px;
-	margin-left: -190px;
-}
+
 .header__two__container-link {
-	margin-top: -100px;
+	margin-top: 0px;
 }
 .header__two__container-link-li {
 	color: #24292E;
@@ -170,23 +144,16 @@
 .header__two__container-banner {
 	max-width: 1440px;
 	width: 100%;
-	height: 500px;
+	height: 250px;
 	margin: 0 auto;
 	background-color: ;
 
 	overflow: hidden;
 
 }
-.container__banner {
-	max-width: 1440px;
-	width: 200%;
-	margin: 0 auto;
-	display: block;
-	border-radius: 0px;
-	margin-left: -210px;
-}
+
 .header__two__container-link {
-	margin-top: -100px;
+	margin-top: 0px;
 }
 .header__two__container-link-li {
 	color: #24292E;
@@ -218,7 +185,6 @@
 .header__two__container-banner {
 	max-width: 1440px;
 	width: 100%;
-	height: 500px;
 	margin: 0 auto;
 	background-color: ;
 
@@ -239,16 +205,9 @@
 	border-radius: 100px;
 	box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.5);
 }
-.container__banner {
-	max-width: 1440px;
-	width: 200%;
-	margin: 0 auto;
-	display: block;
-	border-radius: 0px;
-	margin-left: -185px;
-}
+
 .header__two__container-link {
-	margin-top: -150px;
+	margin-top: 0px;
 }
 .header__two__container-link-li {
 	font-size: 16px;
@@ -275,20 +234,14 @@
 }
 }
 @media screen and (max-width: 360px){
-.container__banner {
-	max-width: 1440px;
-	width: 200%;
-	margin: 0 auto;
-	display: block;
-	border-radius: 0px;
-	margin-left: -180px;
+.header__two__container-link {
+	margin-top: 0px;
 }
 }
 @media screen and (max-width: 320px){
 .header__two__container-banner {
 	max-width: 1440px;
 	width: 100%;
-	height: 500px;
 	margin: 0 auto;
 	background-color: ;
 
@@ -309,16 +262,9 @@
 	border-radius: 100px;
 	box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.5);
 }
-.container__banner {
-	max-width: 1440px;
-	width: 230%;
-	margin: 0 auto;
-	display: block;
-	border-radius: 0px;
-	margin-left: -210px;
-}
+
 .header__two__container-link {
-	margin-top: -130px;
+	margin-top: 0px;
 }
 .header__two__container-link-li {
 	color: #24292E;
