--- a/style/news__mobile.css
+++ b/style/news__mobile.css
@@ -98,7 +98,7 @@ a {
 	color: white;
 	transform: translate(0px,-220px);
 }
-@media screen and (max-width: 800px){
+@media screen and (max-width: 800px), and (orientation:landscape) {
 .headertwo__container {
 	max-width: 1000px;
 	width: 100%;
