--- a/style/game__layouts.css
+++ b/style/game__layouts.css
@@ -30,7 +30,7 @@ a {
 	max-width: 1920px;
 	width: 100%;
 	height: 300px;
-	background-color: #FFDF00;
+	background-color: ;
 	margin: 0 auto;
 	overflow: hidden;
 }
