--- a/style/news__layouts.css
+++ b/style/news__layouts.css
@@ -19,64 +19,111 @@ a {
 	max-width: 1920px;
 	width: 100%;
 	margin:0 auto;
+	background-color: ;
+	margin-bottom: 200px;
+
 }
 .headertwo__container {
-	max-width: 100%;
-	width: 1000px;
-	height: 800px;
+	width:70%;
 	margin:0 auto;
-	margin-top: 50px;
+	margin-top: 0px;
 	background-color: #24292E;
-	border-radius:0px 0px 50px 50px;
 }
 .container__banner {
-	width: 1000px;
-	height: 133px;
-	border-radius: 0px 0px 50px 50px;
+	width: 100%;
+	height: 200px;
+	background-color: ;
+	margin: 0 auto;
+
 	background-color: #FFDF00;
-	overflow:hidden; ;
+}
+.banner__container {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
+
+	transition: 1s;
 }
-.container__banner-img {
+.banner__container-img {
 	width: 100%;
-	transform: translate(0px,-230px);
-	filter: opacity(0.7);
+	opacity: 0.9;
 	transition: 1s;
 }
-.container__banner-img:hover {
-	transition: 1s;
-	transform: translate(0px,-230px) scale(1.1);
-	filter: opacity(0.7);
-}
-.container__banner-title {
-	font-weight: 500;
-	font-size: 48px;
-	line-height: auto;
+.banner__container-title {
+	z-index: 100;
+	position: absolute;
+
+	font-size: 56px;
 	color: #fff;
-	transform: translate(0px,-570px);
+	transition: 1s;
+
 }
-.container__subtitle {
-	font-weight: 400;
-	font-size: 18px;
-	line-height: auto;
-	color: white;
-	width: 800px;
+.banner__container:hover .banner__container-img {
+	transform: scale(1.2);
+	opacity: 0.8;
+	transition: 1s;
+}
+.banner__container:hover .banner__container-title  {
+	transform: scale(1.2);
+	transition: 1s;
+}
+.description {
+	max-width: 1920px;
+	width: 100%;
+	background-color: #24292E;
+	margin: 0 auto;	
+
+	padding-bottom: 100px;
+}
+.description__text {
+	font-size: 20px;
+	color: #f2f2f2;
+	line-height: 35px;
+
+	width: 90%;
+	background-color: ;
 	margin: 0 auto;
-	margin-top: 50px;
+	
+	padding-top: 20px;
+}
+.photo {
+	display: flex;
+	flex-flow: wrap;
+	justify-content: space-around;
+}
+.image {
+	width: 360px;
+	margin-top: 20px
+}
+.footer {
+	margin-top: auto;
+}
+@media screen and (max-width: 1024px) {
+.headertwo__container {
+	width:100%;
 }
 
-@media screen and (max-width: 1024px), and (orientation:landscape) {
-.headertwo__container {
-	max-width: 1100px;
-	width: 100%;
-	border-radius:0px;
 }
+@media screen and (max-width: 340px) {
 .container__banner {
-	max-width: 1100px;
-	width: 100%;
-	height: 133px;
-	border-radius: 0px 0px 50px 50px;
+	height: 170px;
+}
+.image {
+	width: 340px;
+	margin-top: 20px
+}
+}
+@media screen and (max-width: 340px) {
+.container__banner {
+	height: 160px;
+}
+.image {
+	width: 320px;
+	margin-top: 20px
 }
 }
