--- a/style/blog__layouts.css
+++ b/style/blog__layouts.css
@@ -13,7 +13,17 @@ ul, li {
 a {
 	text-decoration: none;
 }
-
+.mark {
+	background-color: yellow;
+}
+.link-a {
+	color: white;
+	text-decoration: underline;
+}
+.link {
+	display: flex;
+	flex-direction: column;
+}
 /*headertwo */
 .headertwo {
 	max-width: 1920px;
@@ -24,110 +34,222 @@ a {
 	max-width: 1440px;
 	width:100%;
 	margin:0 auto;
-}
-.headertwo__container-photo {
-	max-width: 1440px;
-	width:100%;
-	height: 250px;
-	background-color: black;
-	border-radius: 0px 0px 50px 50px;
-	overflow: hidden;
-}
-.container__photo-img {
-	width: 100%;
-	border-radius: 0px 0px 50px 50px;
-	transition: 1s;
-	object-fit:cover;
-	display: block;
-	transform: translate(0px,-250px);
-	filter: opacity(0.7);
-}
-.container__photo-img:hover {
-	transform: scale(1.1) translate(0px,-250px);
-	transition: 1s;
-	filter: opacity(0.4);
-}
-.headertwo__container-title {
-	font-weight: 500;
-	font-size: 72px;
-	line-height: auto;
-	text-align: center;
-	margin: 0 auto;
-	color: white;
-	transform: translate(0px,-100px);
-}
-
-.headertwo__container-description {
-	margin: 0 auto;
-	max-width: 1440px;
-	width:100%;
-	height: 1000px;
 	background-color: #24292E;
-	border-radius: 0px 0px 50px 50px;
 }
-.description__subtitle {
+.container__banner {
+	width: 100%;
+	height: 250px;
+	background-color: ;
 	margin: 0 auto;
-	max-width: 1000px;
+	border-radius: 0px 0px 30px 30px;
+	background-color: black;
+}
+.banner__container {
 	width: 100%;
-	color: white;
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 40px;
-	margin-top: 0px;
-}
-@media screen and (max-width: 1440px), and (orientation:landscape) {
-.container__photo-img {
-	width: 100%;
-	border-radius: 0px 0px 50px 50px;
-	transition: 1s;
-	object-fit:cover;
-	display: block;
-	transform: translate(0px,-200px);
-	filter: opacity(0.7);
-}
-.container__photo-img:hover {
-	transform: scale(1.1) translate(0px,-200px);
-	transition: 1s;
-	filter: opacity(0.4);
-}
-}
-@media screen and (max-width: 1366px), and (orientation:landscape) {
-	.headertwo__container-title {
-	transform: translate(0px,-170px);
-}
-.container__photo-img {
-	width: 100%;
-	border-radius: 0px 0px 50px 50px;
-	transition: 1s;
-	object-fit:cover;
-	display: block;
-	transform: translate(0px,-200px);
-	filter: opacity(0.7);
-}
-.container__photo-img:hover {
-	transform: scale(1.1) translate(0px,-200px);
-	transition: 1s;
-	filter: opacity(0.4);
-}
-}
-@media screen and (max-width: 1152px), and (orientation:landscape) {
-/*.headertwo__container {
-	transform: scale(0.8);
-	margin-top: -370px;
-}
-.headertwo__container-title {
-	font-weight: 500;
-	font-size: 60px;
-	line-height: auto;
-	text-align: center;
-	margin: 0 auto;
-	color: white;
-	transform: translate(0px,-100px);
-}*/
-}
-@media screen and (max-width: 1024px), and (orientation:landscape) {
-.description__subtitle {
-	width: 850px;
-}
+	height: 100%;
+	overflow: hidden;
 
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
+	transition: 1s;
+}
+.banner__container-img {
+	width: 100%;
+	opacity: 0.7;
+	transition: 1s;
+	border-radius: 0px 0px 15px 15px;
+}
+.banner__container-title {
+	z-index: 100;
+	position: absolute;
+
+	font-size: 80px;
+	color: #fff;
+	transition: 1s;
+	opacity: 1;
+}
+.banner__container:hover .banner__container-img {
+	transform: scale(1.1);
+	opacity: 0.5;
+	transition: 1s;
+}
+.banner__container:hover .banner__container-title  {
+	transform: scale(1.1);
+	transition: 1s;
+}
+.description {
+	max-width: 1920px;
+	width: 100%;
+	background-color: #24292E;
+	margin: 0 auto;	
+
+	padding-bottom: 100px;
+}
+.description__text {
+	font-size: 20px;
+	color: #f2f2f2;
+	line-height: 40px;
+
+	width: 90%;
+	background-color: ;
+	margin: 0 auto;
+	
+	padding-top: 50px;
+}
+@media screen and (max-width: 1152px) {
+.banner__container-title {
+	z-index: 100;
+	position: absolute;
+
+	font-size: 60px;
+	color: #fff;
+	transition: 1s;
+	opacity: 1;
+}
+}
+@media screen and (max-width: 768px) {
+	.container__banner {
+	width: 100%;
+	height: 200px;
+	background-color: ;
+	margin: 0 auto;
+	border-radius: 0px 0px 0px 0px;
+	background-color: black;
+}
+.banner__container-img {
+	width: 100%;
+	opacity: 0.7;
+	transition: 1s;
+	border-radius: 0px 0px 0px 0px;
+}
+.banner__container-title {
+	font-size: 40px;
+}
+}
+@media screen and (max-width: 600px) {
+	.container__banner {
+	width: 100%;
+	height: 200px;
+	background-color: ;
+	margin: 0 auto;
+	border-radius: 0px 0px 0px 0px;
+	background-color: black;
+}
+.banner__container-img {
+	width: 100%;
+	opacity: 0.7;
+	transition: 1s;
+	border-radius: 0px 0px 0px 0px;
+}
+.banner__container-title {
+	font-size: 34px;
+}
+}
+@media screen and (max-width: 480px) {
+	.container__banner {
+	width: 100%;
+	height: 200px;
+	
+	margin: 0 auto;
+	border-radius: 0px 0px 0px 0px;
+	background-color: black;
+}
+.banner__container-img {
+	width: 100%;
+	opacity: 0.7;
+	transform: scale(1.2);
+	transition: 1s;
+	border-radius: 0px 0px 0px 0px;
+}
+.banner__container:hover .banner__container-img {
+	transform: scale(1.3);
+	opacity: 0.5;
+	transition: 1s;
+}
+.banner__container-title {
+	font-size: 28px;
+}
+}
+@media screen and (max-width: 414px) {
+	.container__banner {
+	width: 100%;
+	height: 200px;
+	
+	margin: 0 auto;
+	border-radius: 0px 0px 0px 0px;
+	background-color: black;
+}
+.banner__container-img {
+	width: 100%;
+	opacity: 0.7;
+	transform: scale(1.4);
+	transition: 1s;
+	border-radius: 0px 0px 0px 0px;
+}
+.banner__container:hover .banner__container-img {
+	transform: scale(1.5);
+	opacity: 0.5;
+	transition: 1s;
+}
+.banner__container-title {
+	font-size: 24px;
+}
+}
+@media screen and (max-width: 375px) {
+	.container__banner {
+	width: 100%;
+	height: 180px;
+	
+	margin: 0 auto;
+	border-radius: 0px 0px 0px 0px;
+	background-color: black;
+}
+.banner__container-img {
+	width: 100%;
+	opacity: 0.7;
+	transform: scale(1.4);
+	transition: 1s;
+	border-radius: 0px 0px 0px 0px;
+}
+.banner__container:hover .banner__container-img {
+	transform: scale(1.4);
+	opacity: 0.7;
+	transition: 1s;
+}
+.banner__container:hover .banner__container-title  {
+	transform: scale(1);
+	transition: 1s;
+}
+.banner__container-title {
+	font-size: 24px;
+}
+}
+@media screen and (max-width: 340px) {
+.container__banner {
+	width: 100%;
+	height: 170px;
+	
+	margin: 0 auto;
+	border-radius: 0px 0px 0px 0px;
+	background-color: black;
+}
+.banner__container-title {
+	font-size: 30px;
+}
+}
+@media screen and (max-width: 320px) {
+.container__banner {
+	width: 100%;
+	height: 160px;
+	
+	margin: 0 auto;
+	border-radius: 0px 0px 0px 0px;
+	background-color: black;
+}
+.banner__container-title {
+	font-size: 30px;
+}
 }
