--- a/style/blog_next_and_back_btn.css
+++ b/style/blog_next_and_back_btn.css
@@ -60,3 +60,24 @@
 	width: 850px;
 }
 }
+@media screen and (max-width: 800px), and (orientation:landscape) {
+.btn_container {
+	max-width: 800px;
+	width: 90%;
+}
+}
+@media screen and (max-width: 340px), and (orientation:landscape) {
+.btn_container {
+	max-width: 800px;
+	width: 100%;
+
+	background-color: ;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.btn-back:not(:first-child) {
+	margin-top: 50px;
+}
+}
