--- a/style/blog_next_btn.css
+++ b/style/blog_next_btn.css
@@ -49,3 +49,15 @@
 	width: 850px;
 }
 }
+@media screen and (max-width: 800px), and (orientation:landscape) {
+.btn_container {
+	max-width: 800px;
+	width: 90%;
+}
+}
+@media screen and (max-width: 340px), and (orientation:landscape) {
+.btn_container {
+	display: flex;
+	flex-direction: column;
+}
+}
