--- a/style/blog__layouts.css
+++ b/style/blog__layouts.css
@@ -29,12 +29,14 @@ a {
 	max-width: 1920px;
 	width: 100%;
 	margin:0 auto;
+
 }
 .headertwo__container {
 	max-width: 1440px;
 	width:100%;
 	margin:0 auto;
 	background-color: #24292E;
+
 }
 .container__banner {
 	width: 100%;
@@ -61,6 +63,7 @@ a {
 	opacity: 0.7;
 	transition: 1s;
 	border-radius: 0px 0px 15px 15px;
+
 }
 .banner__container-title {
 	z-index: 100;
@@ -70,6 +73,7 @@ a {
 	color: #fff;
 	transition: 1s;
 	opacity: 1;
+
 }
 .banner__container:hover .banner__container-img {
 	transform: scale(1.1);
@@ -87,6 +91,7 @@ a {
 	margin: 0 auto;	
 
 	padding-bottom: 100px;
+
 }
 .description__text {
 	font-size: 20px;
@@ -98,6 +103,7 @@ a {
 	margin: 0 auto;
 	
 	padding-top: 50px;
+
 }
 @media screen and (max-width: 1152px) {
 .banner__container-title {
@@ -177,7 +183,7 @@ a {
 	.container__banner {
 	width: 100%;
 	height: 200px;
-	
+	overflow: hidden;
 	margin: 0 auto;
 	border-radius: 0px 0px 0px 0px;
 	background-color: black;
@@ -199,6 +205,7 @@ a {
 }
 }
 @media screen and (max-width: 375px) {
+
 	.container__banner {
 	width: 100%;
 	height: 180px;
@@ -213,6 +220,7 @@ a {
 	transform: scale(1.4);
 	transition: 1s;
 	border-radius: 0px 0px 0px 0px;
+
 }
 .banner__container:hover .banner__container-img {
 	transform: scale(1.4);
@@ -225,6 +233,7 @@ a {
 }
 .banner__container-title {
 	font-size: 24px;
+
 }
 }
 @media screen and (max-width: 340px) {
@@ -241,6 +250,7 @@ a {
 }
 }
 @media screen and (max-width: 320px) {
+
 .container__banner {
 	width: 100%;
 	height: 160px;
