--- a/style/minigames.css
+++ b/style/minigames.css
@@ -37,7 +37,8 @@ a {
 	line-height: auto;
 	color: white;
 
-	width: 800px;
+	max-width: 800px;
+	width: 90%;
 	margin: 0 auto;
 	padding-top: 32px;
 }
