--- a/style/news__mobile.css
+++ b/style/news__mobile.css
@@ -168,6 +168,59 @@
 	transform: translate(0px,-220px);
 }
 }
+@media screen and (max-width: 360px) {
+.headertwo__container {
+	max-width: 1000px;
+	width: 100%;
+	height: 110px;
+	border-radius:0px;
+}
+.headertwo__container-discription {
+	font-weight: 500;
+	font-size: 12px;
+	line-height: auto;
+	color: white;
+
+	max-width: 800px;
+	width: 90%;
+	margin: 0 auto;
+	padding-top: 15px;
+}
+.container__line {
+	width: 100%;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	
+}
+.container__line-block {
+	max-width: 360px;
+	width: 100%;
+	height: 250px;
+	background-color: #FFDF00;
+	border-radius: 0px;
+	margin-top: 100px;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	overflow: hidden;
+}
+.line__block-subtitle {
+	max-width: 418px;
+	width: 90%;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: auto;
+	text-align: center;
+	color: white;
+	transform: translate(0px,-220px);
+}
+}
 @media screen and (max-width: 340px) {
 .container__line-block {
 	max-width: 340px;
