--- a/style/index__mobile.css
+++ b/style/index__mobile.css
@@ -155,20 +155,17 @@
 	margin: 0 auto;
 	display: flex;
 	flex-direction:column ;
-
+	margin-top: 50px;
 }
 .container__block-one {
 	display: flex;
 	flex-direction:column ;
 	align-items: center;
 	width:100%;
+	height: 100%;
+	background: ;
 }
-.container__block-one:nth-child(1) {
-	margin-top: 50px;
-}
-.container__block-one:nth-child(2) {
-	margin-top: 250px;
-}
+
 .info__container {
 	margin: 0 auto;
 	width: 100%;
