--- a/style/game__layouts.css
+++ b/style/game__layouts.css
@@ -70,6 +70,7 @@ a {
 }
 .description__block__left-img {
 	transition: 1s;
+	width: 100%;
 }
 .description__block__left-img:hover {
 	transition: 1s;
@@ -121,7 +122,7 @@ a {
 .block__right-description {
 	max-width: 713px;
 	width: 100%;
-	height: 343px;
+	padding-bottom: 50px;
 	background-color: #F2F2F2;
 	margin-top: 60px;
 }
