--- a/style/game__layouts_mobile.css
+++ b/style/game__layouts_mobile.css
@@ -58,7 +58,7 @@
 }
 .description__block__left-img:hover {
 	transition: 1s;
-	transform: scale(2);
+	transform: scale(1.1);
 }
 
 .description__block__left-desecription {
@@ -90,10 +90,10 @@
 .block__right-description {
 	max-width: 1200px;
 	width: 100%;
-	height: 343px;
 	background-color: #f2f2f2;
 	margin: 0 auto;
 	margin-top: 60px;
+	padding-bottom: 50px;
 }
 .right__description-title {
 	font-weight: 700;
