--- a/redesign/style/header_footer.css
+++ b/redesign/style/header_footer.css
@@ -96,6 +96,7 @@ body {
   width: 100%;
   padding-top: 100px;
   padding-bottom: 50px;
+  margin-top: 5vh;
 }
 .watter_mark {
   position: absolute;
