--- a/redesign/style/test.css
+++ b/redesign/style/test.css
@@ -23,7 +23,7 @@ body {
   color:var(--TextColor);
   overflow-x: hidden;
 }
-/* header */
+/*  */
 .header {
   max-width: 1920px;
   width: 100%;
@@ -64,11 +64,14 @@ body {
   grid-template-columns: repeat(auto-fit,150px);
   grid-column-start: 10;
   grid-column-end: 17;
+
 }
 .header__menu-items {
+
   font-weight: 400;
   font-size: 20px;
   transition: .5s;
+
   user-select: none;
   cursor: pointer;
 }
@@ -82,79 +85,25 @@ body {
 .header__menu-items:hover > .menu__items-underline{
   width: 100%;
 }
+
 .signin {
   font-weight: 500;
 }
-/* footer */
-.footer {
-  width: 100%;
-  margin: 0 auto;
-//background: yellow;
-  position: absolute;
-}
-.footer__container{
-//  background: green;
-  max-width: 1920px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
-  margin-top: 150px;
-  padding-bottom: 50px;
-  display: flex;
-}
-.watter_mark {
-  width: 100px;
-  //background:   red;
-}
-.watter_mark-img {
-  width: 80px;
-  margin-left: 20px;
-  margin-top: 0px;
-}
-.footer__container-menu {
-  max-width: 1920px;
-  width: 100%;
-  max-height: 300px;
-  height: 100%;
+/*  */
 
-  display: flex;
-}
-.footer__menu-ul {
-  margin-top: 50px;
-  margin: 0 auto;
-}
-.itemsToUpper {
-  font-weight: 500;
-  font-size: 14px;
-  user-select: none;
-}
-.footer__menu-items {
-  font-weight: 400;
-  font-size: 12px;
-  transition: .5s;
-}
-.footer__menu-items:not(:first-child) {
-  padding-top: 13px;
-}
-.footer__items-a  {
-}
-.footer__items-a > .menu__items-underline {
-  background: var(--TextColor);
-}
-.footer__items-a:hover > .menu__items-underline{
-  width: 100%;
-  background: var(--TextColor);
-}
 @media screen and (max-width:1680px){
   /* header */
   .header__container-menu {
     grid-column-start: 9;
+    grid-column-end: 17;
   }
   /* footer */
 }
 @media screen and (max-width:1600px){
   /* header */
-
+  .header__menu-items {
+    font-size: 16px;
+  }
   .signin {
     font-weight: 500;
   }
@@ -165,7 +114,9 @@ body {
   /* header */
   .header__container-menu {
     grid-column-start: 8;
+    grid-column-end: 17;
   }
+
   .signin {
     font-weight: 500;
   }
@@ -176,6 +127,7 @@ body {
   /* header */
   .header__container-menu {
     grid-column-start: 7;
+    grid-column-end: 17;
   }
   .signin {
     font-weight: 500;
@@ -198,6 +150,7 @@ body {
   /* header */
   .header__container-menu {
     grid-column-start: 6;
+    grid-column-end: 17;
   }
   .signin {
     font-weight: 500;
@@ -208,6 +161,7 @@ body {
   /* header */
   .header__container-menu {
     grid-column-start: 5;
+    grid-column-end: 17;
   }
   .signin {
     font-weight: 500;
@@ -218,11 +172,12 @@ body {
   /* header */
   .header__container-menu {
     grid-column-start: 3;
-  }
-  .signin {
-    font-weight: 500;
-  }
+    grid-column-end: 17;
 
+  }
+  .header__menu-items {
+    justify-self: center;
+  }
   /* footer */
 
 }
